--- a/Makefile_cfgs/Platforms/Switch.cfg
+++ b/Makefile_cfgs/Platforms/Switch.cfg
@@ -22,7 +22,7 @@ LIBPATHS += `$(PKGCONFIG) --libs-only-L libglad egl glesv1_cm`
 SUFFIX =	.elf
 PKGSUFFIX = .nro
 
-SRB2VERSION = 2.2.10
+SRB2VERSION = 2.2.11
 APPDIR=$(OUTDIR)/switch/$(NAME)
 ASSETSDIR=./assets
 NROUPDATEZIPNAME=$(NAME)_$(SRB2VERSION).update.nro.zip
@@ -31,7 +31,7 @@ PATCHZIPNAME=$(NAME)_$(SRB2VERSION).update.zip
 
 $(OUTDIR)/$(NAME)$(PKGSUFFIX): $(OUTDIR)/$(NAME)$(SUFFIX)
 	@echo -n "Building nro..."
-	@$(NACPTOOL) --create "Sonic Robo Blast 2" "Sonic Team Jr, heyjoeway, carstene1ns" "$(SRB2VERSION)" $(OUTDIR)/details.nacp
+	@$(NACPTOOL) --create "Sonic Robo Blast 2" "Sonic Team Jr, PASRC, heyjoeway, carstene1ns" "$(SRB2VERSION)" $(OUTDIR)/details.nacp
 	@elf2nro $< $@ --icon=./src/sdl/SRB2Switch/icon.jpg --nacp=$(OUTDIR)/details.nacp
 
 	@echo Generating $(NROUPDATEZIPNAME)...
